--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <div class="w-[30%]">
           <img
             class="w-full"
-            src="/src/img/house-2.jpg"
+            src="./src/img/house-2.jpg"
             alt="Interieur d'une maison"
           />
           <div class="text-center m-auto w-auto p-4">
@@ -96,7 +96,7 @@
         </div>
         <div class="w-[30%]">
           <img
-            src="/src/img/house-3.jpg"
+            src="./src/img/house-3.jpg"
             class="w-full"
             alt="Interieur d'une maison"
           />
